2012-08-26 John Wu <John dot Wu at ACM dot org>
	* src/array_t.h:195 change atual-inUse() == 1 to actual-filename()
	== 0 to allow shallow copies to be modified through push_back

2012-08-25 John Wu <John dot Wu at ACM dot org>
	* src/array_t.cpp: change resize to make use of reserve instead of
	explicitly allocating space

2012-08-24 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: change index::indexFileName to use the incoming
	argument as the index file name if it ends with ".idx" (restoring
	much of the code deleted on 2012-07-27)
	* src/array_t.cpp: change function reserve to use the copy-and-swap
	strategy to avoid losing existing content - continuing the effort
	to make it possible to serialize many bitmaps into a single buffer

2012-08-23 John Wu <John dot Wu at ACM dot org>
	* src/bord.h: add using ibis::part::buildIndexes to address the
	complaints issued by clang

2012-08-21 John Wu <John dot Wu at ACM dot org>
	* src/query.h, src/query.cpp: clarify the arguments of the
	constructor and the user of recovery feature.
	* src/bitvector.cpp, src/bitvector64.cpp: reserve the exact size
	when writing the serialized version, this should make it possible
	to write many bitvectors into a single buffer

2012-08-20 John Wu <John dot Wu at ACM dot org>
	* src/selectParser.yy, src/selectClause.h, src/selectClause.cpp,
	src/bundles.cpp, src/colValues.cpp: add support for aggregation
	function group_concat (requested by Michael Beauregard
	michael at insightfulminds.com)
	* src/colValues.h:803 explicitly choose between CATEGORY or TEXT,
	previously this was enforced by the constructor of
	ibis::colStrings, however group_concat makes it possible to
	generate strings from any type

2012-08-17 John Wu <John dot Wu at ACM dot org>
	* src/qExpr.h:616 the copy constructor of ibis::qKeyword assigns
	the wrong type
	* tests/Makefile.am: add test case 12 to check-text to exercise
	the issue raised by Aditya <nerur00 at gmail.com>
