@@ -9,8 +9,8 @@ if (! ${HOSTNAME}) {
 }
 print "Configuring on ${HOSTNAME}\n";
 if (${HOSTNAME} =~ m/bit\.[lbl.gov|local]/) {
-# on a Mac used by a developer, enable maintainer mode, use debug options # CC=gcc-mp-4.7 CXX=g++-mp-4.7
-    $cmd="./configure --prefix=${HOME}/Darwin/fastbit --enable-maintainer-mode --with-java CFLAGS='-g -O0 -Wall' CXXFLAGS='-g -O0 -Wall' CC=clang CXX=clang++";
+# on a Mac used by a developer, enable maintainer mode, use debug options # CC=gcc-mp-4.7 CXX=g++-mp-4.7 # CC=clang CXX=clang++
+    $cmd="./configure --prefix=${HOME}/Darwin/fastbit --enable-maintainer-mode --with-java CFLAGS='-g -O0 -Wall' CXXFLAGS='-g -O0 -Wall'";
 }
 elsif (${HOSTNAME} =~ m/^data5[.lbl.gov]?$/) {
 # on data5, know where is java and where to install, use extra optimization
