@@ -471,7 +471,7 @@ int ibis::range::write32(int fdes) const {
     }
 
     for (uint32_t i = 0; i < nobs; ++i) {
-	bits[i]->write(fdes);
+	if (bits[i]) bits[i]->write(fdes);
 	offset32[i+1] = UnixSeek(fdes, 0, SEEK_CUR);
     }
     ierr = UnixSeek(fdes, start+sizeof(uint32_t)*2, SEEK_SET);
@@ -546,7 +546,7 @@ int ibis::range::write64(int fdes) const {
     }
 
     for (uint32_t i = 0; i < nobs; ++i) {
-	bits[i]->write(fdes);
+	if (bits[i]) bits[i]->write(fdes);
 	offset64[i+1] = UnixSeek(fdes, 0, SEEK_CUR);
     }
     ierr = UnixSeek(fdes, start+sizeof(uint32_t)*2, SEEK_SET);
