@@ -405,7 +405,7 @@ int ibis::pale::write32(int fdes) const {
 	return -8;
     }
     for (i = 0; i < nobs; ++i) {
-	bits[i]->write(fdes);
+	if (bits[i]) bits[i]->write(fdes);
 	offset32[i+1] = UnixSeek(fdes, 0, SEEK_CUR);
     }
     ierr = UnixSeek(fdes, start+2*sizeof(uint32_t), SEEK_SET);
@@ -542,7 +542,7 @@ int ibis::pale::write64(int fdes) const {
 	return -8;
     }
     for (i = 0; i < nobs; ++i) {
-	bits[i]->write(fdes);
+	if (bits[i]) bits[i]->write(fdes);
 	offset64[i+1] = UnixSeek(fdes, 0, SEEK_CUR);
     }
     ierr = UnixSeek(fdes, start+2*sizeof(uint32_t), SEEK_SET);
